--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,12 @@
-{
+
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "build": "node node_modules/vite/bin/vite.js build",
+    "lint": "eslint . --{ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
