--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,4 @@
-
+{
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -27,3 +27,5 @@
     "vite": "^5.3.4"
   }
 }
+
+  
